# rust-greedy-voxel

./: Cargo.toml  build.sh
src/: lib.rs
src/voxel/: chunk copy.rs  chunk.rs  draw_data.rs  drawdata.rs  mesh.rs  mod.rs  world.rs
