[package]
name = "rust-greedy-voxel"
version = "0.1.0"
authors = ["Sebastian Frederick <sebastian@sebastiancodes.online>"]
description = "A voxel mesher and control for Rust"
license = "MIT/Apache-2.0"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }